--- a/contact.css
+++ b/contact.css
@@ -6,7 +6,7 @@
     font-family: "Lato", sans-serif;
 }
 body {
-    background-image: url("../assets/Achtergrond contact.png");
+    background-image: url("assets/Achtergrond contact.png");
     background-size: cover;
 }
 nav {
@@ -80,7 +80,7 @@ section p {
 }
 @media screen and (max-width: 1050px) {
     body {
-        background-image: url("../assets/Achtergrond_contact_tablet.png");
+        background-image: url("assets/Achtergrond_contact_tablet.png");
     }
     nav {
         padding: 40px 100px;
@@ -100,7 +100,7 @@ section p {
 }
 @media screen and (max-width: 645px) {
     body {
-        background-image: url("../assets/Achtergrond_contact_phone.png");
+        background-image: url("assets/Achtergrond_contact_phone.png");
         background-size: 100%;
     }
     nav {
