--- a/home.css
+++ b/home.css
@@ -6,7 +6,7 @@
     font-family: "Lato", sans-serif;
 }
 body {
-    background-image: url("../assets/Achtergrond home.png");
+    background-image: url("assets/Achtergrond home.png");
     background-size: cover;
 }
 nav {
@@ -60,7 +60,7 @@ nav img {
 }
 @media screen and (max-width: 900px) {
     body {
-        background-image: url("../assets/Achtergrond_home_tablet.png");
+        background-image: url("assets/Achtergrond_home_tablet.png");
     }
     nav {
         padding: 40px 100px;
@@ -75,7 +75,7 @@ nav img {
 }
 @media screen and (max-width: 645px) {
     body {
-        background-image: url("../assets/Achtergrond_home_phone.png");
+        background-image: url("assets/Achtergrond_home_phone.png");
     }
     nav {
         padding: 40px 0 0 45px;
