--- a/oefening4.1.css
+++ b/oefening4.1.css
@@ -5,7 +5,7 @@
     font-family: "Calibri Light", sans-serif;
 }
 body{
-    background-image: url("../assets/achtergrond.png");
+    background-image: url("assets/achtergrond.png");
     /*display: flex;
     justify-content: center;*/
 }
