--- a/contact.css
+++ b/contact.css
@@ -45,6 +45,9 @@ main h1 {
     width: 300px;
     text-align: center;
     margin: 0 auto;
+    font-family: "larken", sans-serif;
+    font-weight: 500;
+    font-style: normal;
 }
 .icons {
     display: flex;
