--- a/home.css
+++ b/home.css
@@ -44,21 +44,21 @@ nav img {
     font-weight: 500;
     font-style: normal;
 }
-#cv {
+
+#cv a {
+    color: #000;
+    text-decoration: none;
     margin-top: 250px;
     margin-left:  140px;
     background-color: #F0F0F0;
     border-radius: 36px;
     width: 150px;
-    padding: 20px;
+    padding: 20px 40px;
     text-align: center;
 }
-#cv a {
-    color: #000;
-    text-decoration: none;
-}
-#cv:hover {
+#cv a:hover {
     background-color: #8f8f8f;
+    color: #FFFFFF;
 }
 @media screen and (max-width: 900px) {
     body {
