--- a/home.css
+++ b/home.css
@@ -6,13 +6,15 @@
     font-family: "Lato", sans-serif;
 }
 body {
-    background-image: url("assets/Achtergrond home.png");
+    background-image: url("assets/Achtergrond-Portfolio.jpg");
     background-size: cover;
 }
+
+/* NAVIGATIE */
 nav {
     display: flex;
     justify-content: space-between;
-    padding: 40px 140px;
+    padding: 30px 100px;
 }
 nav ul {
     display: flex;
@@ -24,6 +26,7 @@ nav ul li {
 }
 nav ul li a {
     text-decoration: none;
+    color: #fff;
 }
 nav ul li a:hover {
     color: #8f8f8f;
@@ -36,66 +39,43 @@ nav img {
 #home {
     text-decoration: underline;
 }
-#intro {
-    margin: 150px 140px;
+
+/* MAIN */
+#ik {
+    width: 100%;
 }
-#intro h1 {
+
+.intro {
+    padding-top: 100px;
+}
+
+h1 {
     font-family: "larken", sans-serif;
     font-weight: 500;
     font-style: normal;
 }
 
-#cv a {
-    color: #000;
-    text-decoration: none;
-    margin-top: 250px;
-    margin-left:  140px;
+.cv {
+    padding-top: 100px;
+}
+
+.cv a {
     background-color: #F0F0F0;
-    border-radius: 36px;
-    width: 150px;
-    padding: 20px 40px;
+    text-decoration: none;
+    color: #000;
+    padding: 12px 25px;
+    border-radius: 10px;
     text-align: center;
 }
-#cv a:hover {
+
+.cv a:hover {
     background-color: #8f8f8f;
     color: #FFFFFF;
 }
-@media screen and (max-width: 900px) {
-    body {
-        background-image: url("assets/Achtergrond_home_tablet.png");
-    }
-    nav {
-        padding: 40px 100px;
-    }
-    #intro {
-        margin: 100px 100px;
-        font-size: larger;
-    }
-    #cv {
-        margin: 200px 100px;
-    }
-}
-@media screen and (max-width: 645px) {
-    body {
-        background-image: url("assets/Achtergrond_home_phone.png");
-    }
-    nav {
-        padding: 40px 0 0 45px;
-    }
-    nav ul {
-        flex-direction: column;
-        align-items: end;
-    }
-    nav ul li {
-        padding: 5px 20px;
-    }
-    #intro {
-        margin: 80px 45px;
-        font-size: smaller;
-    }
-    #cv {
-        margin: 150px 45px;
-        width: 100px;
-        padding: 10px 20px;
+
+/* MEDIAQUERRY */
+@media screen and (min-width: 768px) {
+    .intro {
+        padding-top: 130px;
     }
 }
