--- a/about.css
+++ b/about.css
@@ -11,38 +11,38 @@ body {
     background-size: 100%;
 }
 
-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 40px 140px;
+/* NAVIGATIE */
+.navbar {
+    background-color: #2a2a2a;
+    position: fixed;
+    width: 100%;
 }
 
-nav ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+#nav {
+    width: 60px;
 }
 
-nav ul li {
-    list-style-type: none;
-    padding: 0 20px;
+a {
+    text-align: right;
 }
 
-nav ul li a {
-    text-decoration: none;
-}
-nav ul li a:hover {
-    color: #8f8f8f;
+.nav-link {
+    color: #fff;
 }
 
-nav img {
-    width: auto;
-    height: 45px;
+.navbar-toggler:focus{
+    box-shadow: none;
 }
 
-#about {
-    text-decoration: underline;
+.navbar-toggler {
+    border: transparent;
 }
+
+.aboutlink {
+    color: #cd2871;
+}
+
+/* MAIN */
 article {
     display: flex;
     flex-direction: row;
@@ -70,56 +70,10 @@ h1 {
     font-weight: 500;
     font-style: normal;
 }
-@media screen and (max-width: 1170px) {
-    body {
-        background-image: url("assets/Achtergrond_about_tablet.png");
-    }
-    nav {
-        padding: 40px 100px;
-    }
-    article {
-        flex-direction: column;
-        align-items: center;
-    }
-    .sectie1, .sectie2 {
-        margin: 0 130px;
-        font-size: larger;
-    }
-    main section article img {
-        width: 300px;
-        margin: 50px 0;
-    }
-    #child1 {
-        order: 2;
-        margin-bottom: 70px
-    }
-    #child2 {
-        order: 1;
-    }
-}
-@media screen and (max-width: 645px) {
-    body {
-        background-image: url("assets/Achtergrond_about_phone.png");
-    }
-    nav {
-        padding: 40px 0 0 45px;
-    }
-    nav ul {
-        flex-direction: column;
-        align-items: end;
-    }
-    nav ul li {
-        padding: 5px 20px;
-    }
-    .sectie1, .sectie2 {
-        margin: 0 45px;
-        font-size: smaller;
-    }
-    main section article img {
-        width: 250px;
-        margin: 30px 0;
-    }
-    article div {
-        margin: 20px 45px;
+
+/* MEDIAQUERRY */
+@media screen and (min-width: 768px) {
+    .navbar-brand {
+        padding-left: 45px;
     }
 }
