--- a/mywork.css
+++ b/mywork.css
@@ -9,37 +9,42 @@ body {
     background-image: url("assets/Achtergrond mywork.png");
     background-size: 100%;
 }
-nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 40px 140px;
+/* NAVIGATIE */
+.navbar {
+    background-color: #2a2a2a;
+    position: fixed;
+    width: 100%;
 }
-nav ul {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+
+#nav {
+    width: 60px;
 }
-nav ul li {
-    list-style-type: none;
-    padding: 0 20px;
+
+a {
+    text-align: right;
 }
-nav ul li a:hover {
-    color: #8f8f8f;
+
+.nav-link {
+    color: #fff;
 }
-nav ul li a {
-    text-decoration: none;
+
+.navbar-toggler:focus{
+    box-shadow: none;
 }
-nav img {
-    width: auto;
-    height: 45px;
+
+.navbar-toggler {
+    border: transparent;
 }
-#work {
-    text-decoration: underline;
+
+.worklink {
+    color: #cd2871;
 }
+
+/* MAIN */
 .projecten {
     display: flex;
     justify-content: center;
-    margin-top: 4%;
+
 }
 section {
     display: flex;
@@ -69,53 +74,10 @@ section img {
     width: 120px;
     margin: 20px 0 40px 0;
 }
-@media screen and (max-width: 1170px) {
-    body {
-        background-image: url("assets/Achtergrond_work_tablet.png");
-    }
-    nav {
-        padding: 40px 100px;
-    }
-    .projecten {
-        flex-direction: column;
-        align-items: center;
-        margin: 50px 0px;
-    }
-    section {
-        width: 300px;
-        height: 350px;
-    }
-    section img {
-        width: 180px;
-    }
-    section a {
-        width: 230px;
-        padding: 20px 10px;
-    }
-}
-@media screen and (max-width: 645px) {
-    body {
-        background-image: url("assets/Achtergond_work_phone.png");
-    }
-    nav {
-        padding: 40px 0 0 45px;
-    }
-    nav ul {
-        flex-direction: column;
-        align-items: end;
-    }
-    nav ul li {
-        padding: 5px 20px;
-    }
-    section {
-        width: 220px;
-        height: 270px;
-    }
-    section img {
-        width: 120px;
-    }
-    section a {
-        width: 170px;
-        padding: 12px 10px;
+
+/* MEDIAQUERRY */
+@media screen and (min-width: 768px) {
+    .navbar-brand {
+        padding-left: 45px;
     }
 }
