--- a/about.css
+++ b/about.css
@@ -30,6 +30,10 @@ a {
     color: #fff;
 }
 
+.nav-link:hover {
+    color: #818181;
+}
+
 .navbar-toggler:focus{
     box-shadow: none;
 }
@@ -43,37 +47,48 @@ a {
 }
 
 /* MAIN */
-article {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-article div {
-    margin: 45px;
-}
-main section article img {
-    width: 200px;
-    border: 2px solid #FFF;
-    border-radius: 7px;
-}
-.sectie1 {
-    margin: 0 180px;
-    /**position: absolute;
-    left: 180px;
-    top: 125px;**/
-}
-.sectie2 {
-    margin: 0 100px 0 380px;
-}
 h1 {
     font-family: "larken", sans-serif;
     font-weight: 500;
     font-style: normal;
 }
 
+.top1 {
+    margin-top: 100px;
+}
+
+img {
+    width: 100%;
+    border-radius: 10px;
+}
+
+/* FOOTER */
+footer {
+    background-color: #2a2a2a;
+    padding: 15px;
+}
+
+footer ul {
+    margin: 0;
+}
+
+footer a {
+    font-size: 25px;
+    padding: 0 30px;
+    text-align: center;
+}
+
+footer i:hover {
+    color: #cd2871;
+}
+
 /* MEDIAQUERRY */
 @media screen and (min-width: 768px) {
     .navbar-brand {
         padding-left: 45px;
+    }
+
+    .top1, .top2 {
+        margin-top: 150px;
     }
 }
