--- a/contact.css
+++ b/contact.css
@@ -29,6 +29,10 @@ a {
     color: #fff;
 }
 
+.nav-link:hover {
+    color: #818181;
+}
+
 .navbar-toggler:focus{
     box-shadow: none;
 }
@@ -84,6 +88,26 @@ section p {
 }
 .fa-linkedin:hover {
     color: #0a65c0;
+}
+
+/* FOOTER */
+footer {
+    background-color: #2a2a2a;
+    padding: 15px;
+}
+
+footer ul {
+    margin: 0;
+}
+
+footer a {
+    font-size: 25px;
+    padding: 0 30px;
+    text-align: center;
+}
+
+footer i:hover {
+    color: #cd2871;
 }
 
 /* MEDIAQUERRY */
