--- a/mywork.css
+++ b/mywork.css
@@ -28,6 +28,10 @@ a {
     color: #fff;
 }
 
+.nav-link:hover {
+    color: #818181;
+}
+
 .navbar-toggler:focus{
     box-shadow: none;
 }
@@ -73,6 +77,26 @@ section a:hover {
 section img {
     width: 120px;
     margin: 20px 0 40px 0;
+}
+
+/* FOOTER */
+footer {
+    background-color: #2a2a2a;
+    padding: 15px;
+}
+
+footer ul {
+    margin: 0;
+}
+
+footer a {
+    font-size: 25px;
+    padding: 0 30px;
+    text-align: center;
+}
+
+footer i:hover {
+    color: #cd2871;
 }
 
 /* MEDIAQUERRY */
