--- a/mywork-page.css
+++ b/mywork-page.css
@@ -14,6 +14,8 @@ body {
     background-color: #2a2a2a;
     position: fixed;
     width: 100%;
+    top: 0;
+    z-index: 999;
 }
 
 #nav {
@@ -56,6 +58,14 @@ main img {
     border-radius: 10px;
 }
 
+main .wpl_img {
+    opacity: 70%;
+}
+
+main .wpl_img:hover {
+    opacity: 100%;
+}
+
 .top {
     padding-top: 100px;
 }
@@ -74,6 +84,22 @@ main img {
 }
 
 .terug a:hover {
+    background-color: #8f8f8f;
+}
+
+.guide {
+    margin-top: 30px;
+}
+
+.guide a {
+    background-color: #FFFFFF;
+    text-decoration: none;
+    color: #2a2a2a;
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.guide a:hover {
     background-color: #8f8f8f;
 }
 
