--- a/index.css
+++ b/index.css
@@ -2,17 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #FFF;
+    color: #037171;
     font-family: "Lato", sans-serif;
 }
 body {
-    background-image: url("assets/Achtergrond-Portfolio.jpg");
-    background-size: cover;
+    background-color: #e6fcfc;
 }
 
 /* NAVIGATIE */
 .navbar {
-    background-color: #2a2a2a;
+    background-color: #037171;
     position: fixed;
     width: 100%;
 }
@@ -42,7 +41,7 @@ a {
 }
 
 .homelink {
-    color: #cd2871;
+    color: #eea900;
 }
 
 /* MAIN */
@@ -65,22 +64,22 @@ h1 {
 }
 
 .cv a {
-    background-color: #F0F0F0;
+    background-color: #037171;
     text-decoration: none;
-    color: #000;
+    color: #fff;
     padding: 12px 25px;
     border-radius: 10px;
     text-align: center;
 }
 
 .cv a:hover {
-    background-color: #8f8f8f;
+    background-color: #044f4f;
     color: #FFFFFF;
 }
 
 /* FOOTER */
 footer {
-    background-color: #2a2a2a;
+    background-color: #037171;
     padding: 15px;
 }
 
@@ -94,8 +93,12 @@ footer a {
     text-align: center;
 }
 
+footer i {
+    color: #fff;
+}
+
 footer i:hover {
-    color: #cd2871;
+    color: #eea900;
 }
 
 /* MEDIAQUERRY */
@@ -107,6 +110,6 @@ footer i:hover {
         padding-top: 250px;
     }
     .foto {
-        padding-top: 150px;
+        padding-top: 15px;
     }
 }
