--- a/mywork.css
+++ b/mywork.css
@@ -2,16 +2,15 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #FFF;
+    color: #037171;
     font-family: "Lato", sans-serif;
 }
 body {
-    background-image: url("assets/Achtergrond mywork.png");
-    background-size: 100%;
+    background-color: #e6fcfc;
 }
 /* NAVIGATIE */
 .navbar {
-    background-color: #2a2a2a;
+    background-color: #037171;
     position: fixed;
     width: 100%;
 }
@@ -41,7 +40,7 @@ a {
 }
 
 .worklink {
-    color: #cd2871;
+    color: #eea900;
 }
 
 /* MAIN */
@@ -61,7 +60,7 @@ main img {
 
 /* FOOTER */
 footer {
-    background-color: #2a2a2a;
+    background-color: #037171;
     padding: 15px;
 }
 
@@ -75,8 +74,12 @@ footer a {
     text-align: center;
 }
 
+footer i{
+    color: #fff;
+}
+
 footer i:hover {
-    color: #cd2871;
+    color: #eea900;
 }
 
 /* MEDIAQUERRY */
