--- a/contact.css
+++ b/contact.css
@@ -2,17 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #FFF;
+    color: #037171;
     font-family: "Lato", sans-serif;
 }
 body {
-    background-image: url("assets/Achtergrond contact.png");
-    background-size: cover;
+    background-color: #e6fcfc;
 }
 
 /* NAVIGATIE */
 .navbar {
-    background-color: #2a2a2a;
+    background-color: #037171;
     position: fixed;
     width: 100%;
     top: 0;
@@ -43,7 +42,7 @@ a {
 }
 
 .contactlink {
-    color: #cd2871;
+    color: #eea900;
 }
 
 /* MAIN */
@@ -83,7 +82,7 @@ main a {
 
 /* FOOTER */
 footer {
-    background-color: #2a2a2a;
+    background-color: #037171;
     padding: 15px;
 }
 
@@ -97,8 +96,12 @@ footer a {
     text-align: center;
 }
 
+footer i{
+    color: #fff;
+}
+
 footer i:hover {
-    color: #cd2871;
+    color: #eea900;
 }
 
 /* MEDIAQUERRY */
