--- a/contact.css
+++ b/contact.css
@@ -2,16 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #037171;
+    color: #7ea694;
     font-family: "Lato", sans-serif;
 }
 body {
-    background-color: #fff;
+    background-color: #f5f4ef;
 }
 
 /* NAVIGATIE */
 .navbar {
-    background-color: #037171;
+    background-color: #7ea694;
     position: fixed;
     width: 100%;
     top: 0;
@@ -82,7 +82,7 @@ main a {
 
 /* FOOTER */
 footer {
-    background-color: #037171;
+    background-color: #7ea694;
     padding: 15px;
 }
 
