--- a/index.css
+++ b/index.css
@@ -2,16 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #037171;
+    color: #7ea694;
     font-family: "Lato", sans-serif;
 }
 body {
-    background-color: #fff;
+    background-color: #f5f4ef;
 }
 
 /* NAVIGATIE */
 .navbar {
-    background-color: #037171;
+    background-color: #7ea694;
     position: fixed;
     width: 100%;
 }
@@ -64,7 +64,7 @@ h1 {
 }
 
 .cv a {
-    background-color: #037171;
+    background-color: #7ea694;
     text-decoration: none;
     color: #fff;
     padding: 12px 25px;
@@ -73,13 +73,13 @@ h1 {
 }
 
 .cv a:hover {
-    background-color: #044f4f;
+    background-color: #5a806f;
     color: #FFFFFF;
 }
 
 /* FOOTER */
 footer {
-    background-color: #037171;
+    background-color: #7ea694;
     padding: 15px;
 }
 
